--- a/Gestion_AcademicoAdministrativa_Abastos/Formularios/FormularioAula.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Formularios/FormularioAula.xaml
@@ -153,7 +153,7 @@
                                     <Label Content="Cod Ordenador" Grid.Column="0"/>
                                     <TextBox x:Name="TxtCod" Grid.Column="0" Grid.Row="1" />
 
-                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormAulaPisoExample}" >
+                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="6J-32" >
                                         <TextBlock.Style>
                                             <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
                                                 <Setter Property="Visibility" Value="Collapsed"/>
@@ -169,7 +169,7 @@
                                     <Label Content="Estado" Grid.Column="2"/>
                                     <TextBox Grid.Column="2" x:Name="TxtEstado" Grid.Row="1" />
 
-                                    <TextBlock Grid.Column="2" Grid.Row="1" Text="{DynamicResource FormAulaNumExample}" >
+                                    <TextBlock Grid.Column="2" Grid.Row="1" Text="Deteriorado" >
                                         <TextBlock.Style>
                                             <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
                                                 <Setter Property="Visibility" Value="Collapsed"/>
@@ -195,7 +195,7 @@
                                     <Label Content="IP" Grid.Column="0"/>
                                     <TextBox Grid.Column="0" x:Name="TxtIP" Grid.Row="1" />
 
-                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FormAulaNumExample}" >
+                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="192.168.10.112" >
                                         <TextBlock.Style>
                                             <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
                                                 <Setter Property="Visibility" Value="Collapsed"/>
@@ -211,7 +211,7 @@
                                     <Label Content="Sistema Operativo" Grid.Column="2"/>
                                     <TextBox Grid.Column="2" x:Name="TxtSO" Grid.Row="1" />
 
-                                    <TextBlock Grid.Column="2" Grid.Row="1" Text="{DynamicResource FormAulaNumExample}" >
+                                    <TextBlock Grid.Column="2" Grid.Row="1" Text="Windows 10 Home" >
                                         <TextBlock.Style>
                                             <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
                                                 <Setter Property="Visibility" Value="Collapsed"/>
