--- a/Gestion_AcademicoAdministrativa_Abastos/ActasDeEvaluacion.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/ActasDeEvaluacion.xaml
@@ -84,6 +84,18 @@
                                         </Grid.RowDefinitions>
                                         <Label Grid.Row="0" Content="Temas"/>
                                         <TextBox x:Name="TxtTemas" Grid.Row="1" TextWrapping="Wrap" AcceptsReturn="True"/>
+                                        <TextBlock Grid.Column="0" Grid.Row="1" Text="Alumno desobediente, uso de móviles" >
+                                            <TextBlock.Style>
+                                                <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
+                                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                                    <Style.Triggers>
+                                                        <DataTrigger Binding="{Binding Text, ElementName=TxtTemas}" Value="">
+                                                            <Setter Property="Visibility" Value="Visible"/>
+                                                        </DataTrigger>
+                                                    </Style.Triggers>
+                                                </Style>
+                                            </TextBlock.Style>
+                                        </TextBlock>
                                     </Grid>
                                     <Grid Grid.Row="3">
                                         <Grid.ColumnDefinitions>
@@ -97,6 +109,18 @@
                                         <TextBox Name="TxtContenido" Grid.Row="1"
                                                  VerticalContentAlignment="Top" Padding="15,15,0,0"
                                                  TextWrapping="Wrap" AcceptsReturn="True"/>
+                                        <TextBlock Grid.Column="0" Grid.Row="1" Text="Los auriculares no estan permitidos en el centro" >
+                                            <TextBlock.Style>
+                                                <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource PlaceHolderContent}">
+                                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                                    <Style.Triggers>
+                                                        <DataTrigger Binding="{Binding Text, ElementName=TxtContenido}" Value="">
+                                                            <Setter Property="Visibility" Value="Visible"/>
+                                                        </DataTrigger>
+                                                    </Style.Triggers>
+                                                </Style>
+                                            </TextBlock.Style>
+                                        </TextBlock>
                                     </Grid>
                                     <Button x:Name="Create" Content="Añadir Acta de Evaluación"
                                 Grid.Row="5" Click="Create_Click"/>
